Fix icon alignment

--- a/src/app/shared/components/sidemenu/sidemenu-content/sidemenu-content-item/sidemenu-content-item.component.scss
+++ b/src/app/shared/components/sidemenu/sidemenu-content/sidemenu-content-item/sidemenu-content-item.component.scss
@@ -58,7 +58,6 @@
 
       &--sm {
         width: 20px;
-        height: 20px;
         padding-left: 2px;
       }
     }
